--- a/app/components/hello.less
+++ b/app/components/hello.less
@@ -1,5 +1,9 @@
 body{
     #root{
-        font-size: 50px;
+		.hello-component{
+			color: #0f0;
+			border-bottom: 1px solid #ccc;			
+		}
+        
     }
 }
